changed message and added other endpoints

--- a/application.properties
+++ b/application.properties
@@ -2,4 +2,4 @@
 some.property=global
 some.other.property=global
 
-management.endpoints.web.exposure.include=refresh
+management.endpoints.web.exposure.include=*
